2013-11-30  6.8.7-9 Dirk Lemstra <dirk@snakeware...>
  * Fixed bug in automatic selection of OpenCL device (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24542).
  * Fixed transparency for 32 bits BMP.

2013-11-28  6.8.7-9 Cristy  <quetzlzacatenango@image...>
  * The -type bilevel option sometimes returned an all white image (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24444).
  * Check blue channel threshold for -solarize option (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24473).

2013-11-27  6.8.7-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.7-8, SVN revision 13850.

2013-11-27  6.8.7-8  SiuChi Chan  <...>
  * Add an OpenCL-accelerated analog of AddNoiseImage().

2013-11-23  6.8.7-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.7-7, SVN revision 13827.

2013-11-23  6.8.7-7  SiuChi Chan  <...>
  * simplified interface to initialize the OpenCL environment
  * automatic OpenCL device selection algorithm
  * support ModulateImage() acceleration
  * reduce the memory requirement for accelerated blur and unsharp mask

2013-11-16  6.8.7-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.7-6, SVN revision 13767.

2013-11-14  6.8.7-6 Cristy  <quetzlzacatenango@image...>
  * Fix possible memory corruption when writing PSD images (bug report from
    Justin Grant).
  * Constrain color reduction acceleration to positive integers (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=24459).
  * fx:maxima.a now returns the alpha value rather than opacity (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24461).

2013-11-08  6.8.7-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.7-5, SVN revision 13682.

2013-11-03  6.8.7-5 Cristy  <quetzlzacatenango@image...>
  * The jpeg:extent option no longer returns double-free exception (reference